# chatterbox-desktop

./: .env.example  .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  python_ipc_server.py  styles.css
src/: app.rs  main.rs
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
