[package]
name = "chatterbox-desktop-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.6", features = ["web"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
web-sys = { version = "0.3", features = [
    "MediaDevices",
    "MediaStream",
    "MediaStreamConstraints",
    "MediaStreamTrack",
    "Navigator",
    "HtmlAudioElement",
    "Window",
    "Document",
    "KeyboardEvent",
    "Event",
    "EventTarget",
    "HtmlInputElement",
] }
console_error_panic_hook = "0.1.7"

[workspace]
members = ["src-tauri"]
